fix: background color and alignment fix

--- a/frontend/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/web/micro-ui-internals/packages/css/src/index.scss
@@ -688,3 +688,9 @@ input[type="number"] {
   max-height: 120px;
   margin-top: 90px;
 }
+.app-container {
+  background: linear-gradient(90deg, #EFF6FF 0%, #FFFFFF 100%) !important;
+  margin-bottom: 0 !important;
+  min-height: 100vh !important;
+
+}
